# trankil

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
data/fr_en/: input_words.csv
doc/: trankil_schema.pptx
tests/: test_config.py  test_main.py  test_reader.py  test_writer.py
tests/anki/: test_card_generator.py  test_deck_generator.py
tests/api/: test_client.py
tests/models/: test_word_entry.py
tests/preprocessing/: test_preprocessing.py
trankil/: config.py  logger.py  main.py  reader.py  writer.py
trankil/anki/: card_generator.py  deck_generator.py  model.py
trankil/api/: client.py
trankil/models/: word_entry.py
trankil/preprocessing/: preprocessing.py
